# demo_auth_drf_jwt

./: .gitignore  .tool-versions  README.md  docker-compose.yml
back/: pyproject.toml
back/config/: settings.py  urls.py
back/user_app/: router.py  serializers.py
backend/: Dockerfile  pyproject.toml
backend/authentication/: admin.py  models.py  serializers.py  urls.py  views.py
backend/authentication/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
front/: package-lock.json  package.json
front/src/: App.jsx  main.jsx
front/src/components/: Home.jsx  Logout.jsx
front/src/components/Login/: ButtonLogin.jsx  InputPassword.jsx  InputUsername.jsx  Login.jsx  useLogin.js
front/src/uikit/: Button.jsx
