[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Viktor Simon <V-U-Simon@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
django = "^4.2.4"
django-cors-headers = "^4.2.0"
drf-yasg = "^1.21.7"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
